[gd_scene load_steps=12 format=3]

[ext_resource type="Texture2D" uid="uid://sbohp3ewhtkf" path="res://Art/Monster/MonsterHead/els.png" id="1"]
[ext_resource type="Script" path="res://Scene/OtherScene/monster_head.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://by3loe6prvg3o" path="res://Art/Monster/MonsterHead/ui_suoyaota_guaiwutouxiang.png" id="3"]
[ext_resource type="FontFile" uid="uid://bicgw4numqquw" path="res://Font/HYZhuZiMeiXinTiW.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://bfnw5v86bhoh8" path="res://Art/Monster/MonsterHead/hy.png" id="5"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="6"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[node name="MonsterHead" type="TextureRect"]
custom_minimum_size = Vector2(70, 80)
layout_direction = 3
offset_right = 70.0
offset_bottom = 80.0
texture = ExtResource( "1" )
stretch_mode = 4
script = ExtResource( "2" )

[node name="wk" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -28.0
offset_top = 9.0
offset_right = 68.0
offset_bottom = 106.0
scale = Vector2(0.7, 0.7)
texture = ExtResource( "3" )

[node name="Boss" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 29.0
offset_top = 28.0
offset_right = 73.0
offset_bottom = 54.0
rotation = -0.599621
theme_override_colors/font_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource( "4" )
text = "Boss"

[node name="hm" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = -502.0
offset_top = 11.0
offset_right = 67.0
offset_bottom = 580.0
scale = Vector2(0.11, 0.11)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="MonsterName" type="Button" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = 76.0
offset_right = 88.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.462745, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource( "6" )
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "二郎神"
metadata/_edit_lock_ = true

[connection signal="pressed" from="MonsterName" to="." method="_on_monster_name_pressed" flags=18]
