extends TextureRect
@onready var boss: Label = $Boss
@onready var monster_name: Button = $MonsterName

var MonsterInfo: BossInfo
var IsBoss: bool = true#是否为boss
var MonsterName: String = "dxx"#怪物名字
var IsSet: bool
var MonsterNameList = {
	"xh":"小猴子",
	"yh":"妖猴",
	"dxx":"大猩猩",
	"mhw":"猕猴王",
	"yrw":"禺狨王",
	"bf":"蝙蝠",
	"bfsx":"蝙蝠石像",
	"ys":"妖狮",
	"dsj":"地鼠精",
	"stw":"狮驼王",
	"jjy":"机甲鹰",
	"pmw":"鹏魔王",
	"xb":"虾兵",
	"xj":"蟹将",
	"gcx":"龟丞相",
	"yjj":"鱼将军",
	"jmw":"蛟魔王",
	"smw":"鲨魔王",
	"sy":"嗜血狂鲨",
	"nmds":"牛魔斗士",
	"nmw1":"牛魔王一",
	"nmw2":"牛魔王二",
	"nmw3":"牛魔王三",
	"hhe":"红孩儿",
	"gd":"鬼灯",
	"js":"僵尸",
	"syr":"守夜人",
	"hwc":"黑无常",
	"bwc":"白无常",
	"kl":"傀儡",
	"klw":"傀儡王",
	"qgw":"秦广王",
	"pg":"判官",
	"ylw":"阎罗王",
	"sdgm":"三道鬼门",
	"sdw":"宋帝王",
	"yc":"夜叉",
	"mp":"孟婆",
	"zlw1":"转轮王一",
	"zlw2":"转轮王二",
	"zlw3":"转轮王三",
	"wgw":"五官王",
	"bcw":"卞城王",
	"tsw":"泰山王",
	"dsw":"都市王",
	"pdw":"平等王",
	"nt":"牛头",
	"mm":"马面",
	"mz":"曼珠",
	"sh":"沙华",
	"qs":"青蛇",
	"ht":"河童",
	"zlsz":"转轮使者",
	"gy":"鬼鱼",
	"xtq":"哮天犬",
	"ey":"恶鹰",
	"hg":"黑龟",
	"hh":"黑虎",
	"wy":"巫鹰",
	"qly":"千里眼",
	"sfe":"顺风耳",
	"jls":"巨灵神",
	"tbd":"天兵刀",
	"tbq":"天兵枪",
	"tbg":"天兵弓",
	"tbf":"天兵斧",
	"tbc":"天兵锤",
	"zztw":"增长天王",
	"gmtw":"广目天王",
	"dwtw":"多闻天王",
	"cgtw":"持国天王",
	"zzz":"朱子真",
	"yuh":"袁洪",
	"els":"二郎神",
	"goy":"狗妖",
	"yy":"羊妖",
	"ny":"牛妖",
	"sey":"蛇妖",
	"wgj":"蜈蚣精",
	"hdhw":"黑雕护卫",
	"cdhw":"长刀护卫",
	"jdhw":"巨盾护卫",
	"txs":"土行孙",
	"lzz":"雷震子",
	"nz":"哪吒",
	"tttw":"托塔天王",
	"lhtz":"硫磺童子",
	"wdtz":"巫毒童子",
	"ghtz":"勾魂童子",
	"yntz":"隐匿童子",
	"rstz":"人参童子",
	"dhtz":"电魂童子",
	"yjdw":"银角大王",
	"jjdw":"金角大王",
	"qnj":"青牛精",
	"tbjx":"太白金星",
	"tslj":"太上老君",
	"hlhw":"火龙护卫",
	"hylqs":"黑烟炼气师",
	"emlqs":"噩梦炼气师",
	"yflqs":"妖风炼气师",
	"dylqs":"地狱炼气师",
	"hbsz":"花豹圣者",
	"jnsz":"狻猊圣者",
	"basz":"狴犴圣者",
	"znsz":"狰狞圣者",
	"ly":"吕岳",
	"fyj":"飞烟剑",
	"wll":"五龙轮",
	"lx":"罗宣",
	"bx":"碧霄",
	"qx":"琼霄",
	"yx":"云霄",
	"qnyw":"千年妖蚊",
	"qnyc":"千年妖蝉",
	"qnwg":"千年蜈蚣",
	"cysj":"赤月神君",
	"bssj":"白水神君",
	"zmjw":"紫眸鹫王",
	"zqpw":"紫晴鹏王",
	"qysj":"青阳神君",
	"hyr":"黑衣人",
	"ttjz2":"通天教主2",
	"ttjz3":"通天教主3",
}
func _physics_process(delta: float) -> void:
	if not IsSet:
		monster_name.text = MonsterNameList[MonsterName]
		if IsBoss:
			boss.visible = true
		else:
			boss.visible = false
		self.texture = load_(MonsterName)
		IsSet = true
func load_(name_):
	var abc = load("res://Art/Monster/MonsterHead/" + str(name_) + ".png")
	return abc

func _on_monster_name_pressed() -> void:
	if MonsterInfo == null:
		MonsterInfo = Global.AddMonsterInfo(Global.get_parent_(self,0),MonsterName,Vector2(550,450))
		MonsterInfo.z_index = 999
		
